# muggingface

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Shuttle.toml  index.html
.sqlx/: query-40208d50c902d386d282c683792713f0e033a69da5b28ccdc7ef323c31f534ea.json  query-54900c2f7004024add9a5a6015fd745ca5b4d31182e353f264ceeb4d6b45149e.json  query-60014fa6da0fc2266786f0a5fd1c0e9ef97238687c7b3517e656d1fa336549e6.json  query-bb0cb597ddb91a9d59572c0eb7bd899ead2563544adff87b851b1d8d6e03d375.json  query-c7399ba4a9423ec21b2ddf73fdc3898d7bf61de738afe1b53c9596b627cdf596.json
migrations/: 20250519025740_create_torrents_table.sql  20250519033554_torrents_create_update.sql  20250519042822_torrents_fix_update.sql  20250523182812_trigram.sql
muggingface/: Cargo.toml
src/: main.rs
static/: about.html  base.html  donate.html  finished.html  index.html  loading.html
static/css/: shared.css
