[package]
name = "muggingface"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.3.1"
sse-codec = "0.2.0"
async-stream = "0.3.6"
hf-hub = { version = "0.3.2", features = ["tokio"] }
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.26.0"
tracing = "0.1.40"
reqwest = { version = "0.12", features = ["json"] }
bip_metainfo = "0.12.0"
url = "2.5.4"
librqbit = { git = "https://github.com/djmango/rqbit.git", package = "librqbit" }
bendy = "0.3.3"
sha1 = "0.10.6"
percent-encoding = "2.3.1"
hex = "0.4.3"
directories = "6.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
walkdir = "2.5.0"
sha2 = "0.10.8"
rust-s3 = "0.35.1"
zip = "2.6.1"
shuttle-secrets = "0.42.0"
shuttle = "0.8.0"
tera = "1.20.0"

[dev-dependencies]
cargo-watch = "8.4.0"

[build]
assets = [
  "static/*",
]
